Downgrade entire project to JDK11