@@ -117,7 +117,7 @@ public class TsdlQueryService implements QueryService {
       case DATA_POINTS:
         var pointsInPeriods = dataPoints.stream()
             .filter(dp -> containsDataPoint(periods.periods(), dp.timestamp()))
-            .toList();
+            .collect(Collectors.toList());
         return QueryResult.of(pointsInPeriods);
 
       case SAMPLE:
@@ -235,7 +235,7 @@ public class TsdlQueryService implements QueryService {
       );
     }
 
-    var allEventFilters = query.events().stream().flatMap(event -> event.definition().filters().stream()).toList();
+    var allEventFilters = query.events().stream().flatMap(event -> event.definition().filters().stream()).collect(Collectors.toList());
     setThresholdFilterSampleArguments(
         createThresholdFilterStream(allEventFilters),
         sampleValues
@@ -260,17 +260,17 @@ public class TsdlQueryService implements QueryService {
     return Stream.concat(nonNegated, negated);
   }
 
-  @SuppressWarnings("ConstantConditions") // method too complex for this inspection due to the "filterArgument" pattern variable, but logic is fine
   private void setThresholdFilterSampleArguments(Stream<ThresholdFilter> filters, Map<TsdlIdentifier, Double> sampleValues) {
     filters.forEach(thresholdFilter -> {
-      if (!(thresholdFilter.threshold() instanceof TsdlSampleFilterArgument filterArgument)) {
+      if (!(thresholdFilter.threshold() instanceof TsdlSampleFilterArgument)) {
         throw Conditions.exception(Condition.ARGUMENT, "Filter argument must reference a sample (non-literal).");
       }
+      var filterArgument = ((TsdlSampleFilterArgument) thresholdFilter.threshold());
 
       var argumentIdentifier = filterArgument.sample().identifier();
       if (!sampleValues.containsKey(argumentIdentifier)) {
         throw new TsdlEvaluationException(
-            "Sample '%s' referenced by filter has not been computed. Is it declared in the 'SAMPLES' directive?".formatted(
+            String.format("Sample '%s' referenced by filter has not been computed. Is it declared in the 'SAMPLES' directive?",
                 argumentIdentifier.name())
         );
       }
