@@ -14,6 +14,7 @@ import java.time.Instant;
 import java.time.ZoneOffset;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
+import java.util.stream.Collectors;
 import org.jetbrains.annotations.NotNull;
 import org.tsdl.infrastructure.api.StorageService;
 import org.tsdl.infrastructure.common.Condition;
@@ -94,7 +95,7 @@ public final class CsvStorageService extends BaseStorageService implements Stora
       var filePath = lookupConfiguration.getProperty(CsvStorageProperty.FILE_PATH, String.class);
       var fieldSeparator = lookupConfiguration.getProperty(CsvStorageProperty.FIELD_SEPARATOR, Character.class);
       try (var csvReader = createReader(filePath, fieldSeparator)) {
-        return csvReader.stream().toList();
+        return csvReader.stream().collect(Collectors.toList());
       }
     });
   }
@@ -134,7 +135,7 @@ public final class CsvStorageService extends BaseStorageService implements Stora
             var value = row.getField(valueIndex);
 
             return DataPoint.of(Instant.from(formatter.parse(dateTime)), Double.valueOf(value));
-          }).toList();
+          }).collect(Collectors.toList());
     });
   }
 
